# Floaty

./: .gitignore  API-Tests.http  CMakeLists.txt  README.md  commit_data.sh  db.pgsql  floaty.service  j.json  nginx.conf  start.sh
api/: API-Tests.http  CMakeLists.txt
api/cmake/: iflib-inc.cmake
api/include/: Floaty.h
api/include/nlohmann/: json.hpp
api/include/openssl/: cmp.h  core_dispatch.h  crmf.h  e_os2.h  ssl.h
api/include/pqxx/: array.hxx  composite.hxx  config-public-compiler.h  connection.hxx  strconv.hxx  stream_to.hxx  time.hxx  transaction_base.hxx  util.hxx
api/includes/Floaty/: api.h  connectionpool.h  server.h
api/includes/openssl/: configuration.h
api/includes/pqxx/: config-public-compiler.h
api/includes/rapidjson/: ostreamwrapper.h
api/lib/: libpqxx.la
api/lib/pkgconfig/: libpqxx.pc
api/libs/: libsasl2.so.3  libssl.so.3
api/src/: CMakeLists.txt  api.cpp  connectionpool.cpp  main.cpp  routes.cpp  server.cpp
cmake/: iflib-inc.cmake
data/000/: schoolData.json
data/125/: 2023.12.23.125.json  2023.12.27.125.json  2023.12.28.125.json  2024.1.11.125.json  2024.1.12.125.json  2024.1.14.125.json  2024.1.15.125.json  2024.1.16.125.json  2024.1.18.125.json  2024.1.2.125.json  2024.1.20.125.json  2024.1.21.125.json  2024.1.22.125.json  2024.1.24.125.json  2024.1.29.125.json  2024.1.3.125.json  2024.1.30.125.json  2024.1.31.125.json  2024.1.4.125.json  2024.1.5.125.json  2024.1.6.125.json  2024.1.7.125.json  2024.2.1.125.json  2024.2.2.125.json  2024.2.3.125.json  2024.2.6.125.json  2024.2.8.125.json  2024.2.9.125.json  datehere.json  schoolData.json  schoolTemplateDate.json  shoolData.json
data/asserts/: exampleDateData.json
front/: package-lock.json  package.json  packages.sh  vue.config.js
front/public/: login.vue
front/src/: App.vue  main.js
front/src/components/: HelloWorld.vue  footer.vue  navbar.vue  roleSelect.vue
front/src/components/admin/: calendar.vue  context.vue  notifications.vue  sections.vue  sidebar-l.vue  sidebar-r.vue  table.vue
front/src/components/admin/context-forms/: classesInterface.vue  dataInterface.vue  index.js  invitesInterface.vue  usersInterface.vue
front/src/components/admin/context-forms/data/: editAbsent.vue  editAbsentAmount.vue
front/src/components/admin/context-forms/users/: createUser.vue  editUser.vue
front/src/components/user/: choseClass.vue  form.vue
front/src/plugins/: api.js
front/src/router/: index.js
front/src/views/: AdminView.vue  HomeView.vue  LoginView.vue  NotFound.vue  SignupInvite.vue  locker.vue  login.vue
front/src/views/Roles/: AdminView.vue  UserView.vue
includes/: Floaty.h
includes/Floaty/: api.h  api_route.h  authentication.h  authorization.h  connectionpool.h  db_route.h  login.h  server.h  web_route.h
includes/json/: writer.h
includes/jwt-cpp/: jwt.h
libs/: libcom_err.so.2  liblber.so.2  libldap.so.2  libpq.so.5
libs/private/: libcom_err.so.3.0  libfido2.so.1  libfido2.so.1.13.0  libgssapi_krb5.so.2.2  libk5crypto.so.3.1  libkrb5support.so.0.1  libssl.so.3
libs/private/sasl2/: libanonymous.so.3.0.0  libcrammd5.so.3.0.0  libdigestmd5.so.3.0.0  libgs2.so.3.0.0  libgssapiv2.so.3.0.0  libplain.so.3.0.0
run/: nginx.conf  run-api.sh  run-vue.sh  run.sh
setup/: db.pgsql  init_db.sh  packages.sh
setup/api/: db.pgsql  packages.sh  update_db.sh
setup/front/: packages.sh
src/: CMakeLists.txt  api.cpp  api_route.cpp  authentication.cpp  authorization.cpp  checkJWTValid.http  connectionpool.cpp  main.cpp  server.cpp  web.cpp
src/api_route/: api_route.cpp
src/authentication_route/: authentication.cpp
src/authorization_route/: authorization.cpp
src/db_route/: CMakeLists.txt  db_route.cpp  testapp
src/headerFiles/: 1.h
src/libs/private/: libsasl2.so.3.0.0
src/libs/private/sasl2/: libscram.so.3.0.0
src/login_route/: CMakeLists.txt  login.cpp  testapp
src/server_route/: CMakeLists.txt  crow.cpp  testapp
src/web_route/: CMakeLists.txt  web.cpp
web/: 2024.3.7.125.json
web/css/: styles.css
web/html/: docs.html  error.html  error404.html  home.html  login.html  userForm.html  userInterface (1).html  userInterface.html  userInterfaceConfig.html
web/html/templates/: footer.html  navbar.html  navbarControl.html
web/imgs/: LogoNO.ico:Zone.Identifier
web/js/: getData.js  getTable.js  index.js  login.js  popup.js
